--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="col-10 mx-auto mb-5 text-center">
                             <p><i data-feather="smile"></i></p>
                             <p class="lead">
-                                ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. 
+                                ¿Vas a seguir llevando a tu perro al cerro? ¡Te invitamos a dejar a tu mascota en casa para que juntos puedan proteger a nuestra flora y fauna silvestre! 
                             </p>
                         </div>
                     </div>
