--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
+                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-1;1.png" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-4;3.png" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-16;9.png" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="heart"></i> Áreas protegidas</h3>
