--- a/surface.html
+++ b/surface.html
@@ -27,10 +27,10 @@
                         <div class="col-10 col-sm-8 mx-auto">
                             <p class="lead">Color</p>
                             <p><span style="color: rgba(255, 255, 255, 0.8);"> --colorclaro: rgba(255,255,255,0.8);</span></p>
-                            <p><span style="color: rgba(0, 0, 0, 0.8);"> --coloroscuro: rgba(0,0,0,0.8);</span></p>
-                            <div class="alert shadow-sm" role="alert" style="background: #222;">--primercolor: #222;</div>
-                            <div class="alert shadow-sm" role="alert" style="background: #666;">--segundocolor: #666;</div>
-                            <div class="alert shadow-sm" role="alert" style="background: #aaa;">--tercercolor: #aaa;</div>
+                            <p><span style="color: rgba(34, 99, 89, 0.8);"> --coloroscuro: rgba(34, 99, 89, 0.8);</span></p>
+                            <div class="alert shadow-sm" role="alert" style="background: #8784d1;">--primercolor: #8784d1;</div>
+                            <div class="alert shadow-sm" role="alert" style="background: #f7ad48;">--segundocolor: #f7ad48;</div>
+                            <div class="alert shadow-sm" role="alert" style="background: #265652;">--tercercolor: #265652;</div>
                             <hr class="my-5" />
                         </div>
                     </div>
