--- a/surface.html
+++ b/surface.html
@@ -168,8 +168,8 @@
                                 <div class="col-4 col-md-3 col-lg-2 text-left mt-1">Funny</div>
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="humor" viewBox="0 0 200 10" xml:space="preserve">
-                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" stroke-width="1" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#8784d1" stroke-width="1" />
+                                        <circle cx="50" cy="5" r="2.5" fill="#fff" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-right mt-1">Serious</div>
