--- a/skeleton.html
+++ b/skeleton.html
@@ -23,9 +23,9 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="fotografía de un parque nacional de chile" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="fotografía de un parque nacional de chile" />
-                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="fotografía de un parque nacional de chile" />
+                            <img loading="lazy" class="img-fluid bg-light d-md-none" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con un volcán de fondo y una manada de vicuñas en el centro." />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-md-block d-lg-none" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con un volcán de fondo y una manada de vicuñas en el centro." />
+                            <img loading="lazy" class="img-fluid bg-light d-none d-lg-block" src="img/parques-nacionales-chile-3.jpg" alt="Paisaje altiplánico con volcán de fondo y una manada de vicuñas en el centro." />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="heart"></i> Áreas protegidas</h3>
@@ -64,7 +64,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light" src="img/graficopdp.svg" alt="areas silvestres amenazadas por perros y gatos" />
+                            <img loading="lazy" class="img-fluid bg-light" src="img/graficopdp.svg" alt="Porcentaje de áreas silvestres amenazadas por perros y gatos." />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="pen-tool"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
