--- a/surface.html
+++ b/surface.html
@@ -169,7 +169,7 @@
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="humor" viewBox="0 0 200 10" xml:space="preserve">
                                         <line x1="0" y1="5" x2="200" y2="5" stroke="#8784d1" stroke-width="1" />
-                                        <circle cx="200" cy="5" r="2.5" fill="#8784d1" />
+                                        <circle cx="180" cy="5" r="2.5" fill="#8784d1" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-right mt-1">Serious</div>
@@ -177,8 +177,8 @@
                                 <div class="col-4 col-md-3 col-lg-2 text-left mt-1">Formal</div>
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="formalidad" viewBox="0 0 200 10" xml:space="preserve">
-                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" stroke-width="1" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#8784d1" stroke-width="1" />
+                                        <circle cx="100" cy="5" r="2.5" fill="#8784d1" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-right mt-1">Casual</div>
@@ -186,8 +186,8 @@
                                 <div class="col-4 col-md-3 col-lg-2 text-left">Respectful</div>
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="respeto" viewBox="0 0 200 10" xml:space="preserve">
-                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#8784d1" />
+                                        <circle cx="0" cy="5" r="2.5" fill="#8784d1" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-right mt-1">Irreverent</div>
@@ -195,8 +195,8 @@
                                 <div class="col-4 col-md-3 col-lg-2 text-left">Enthusiastic</div>
                                 <div class="col-4 col-md-6 col-lg-8 text-center">
                                     <svg version="1.1" id="entusiasmo" viewBox="0 0 200 10" xml:space="preserve">
-                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#fff" />
-                                        <circle cx="100" cy="5" r="2.5" fill="#fff" />
+                                        <line x1="0" y1="5" x2="200" y2="5" stroke="#8784d1" />
+                                        <circle cx="100" cy="5" r="2.5" fill="#8784d1" />
                                     </svg>
                                 </div>
                                 <div class="col-4 col-md-3 col-lg-2 text-right mt-1">Matter-of-fact</div>
