--- a/skeleton.html
+++ b/skeleton.html
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
+                            <img src="img/CONAF.png" class="card-img-top" alt="logo CONAF" />
                             <div class="card-body">
                                 <a href="https://www.youtube.com/user/conafchile"> Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país por el canal de Youtube de la CONAF.</a>
                             </div>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
+                            <img src="img/FANZINE.png" class="card-img-top" alt="Previsualización del fanzine para el cuidado de zonas silvestres." />
                             <div class="card-body">
                                 <a href="https://drive.google.com/file/d/1IsB2cFMY9Fqihc4kyAYL32lNMiWLMios/view?usp=sharing"> ¡Descarga nuestro fanzine informativo sobre el impacto de los perros en las zonas silvestres!</a>
                             </div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card shadow-sm">
-                            <img src="img/wireframe-aspect_ratio-16-9.png" class="card-img-top" alt="describa la imagen" />
+                            <img src="img/ARTICULO.png" class="card-img-top" alt="Fotografía de una zona rural con perros y los carabineros de chile." />
                             <div class="card-body">
                                 <a href="https://www.conaf.cl/conaf-reitera-llamado-a-no-ingresar-con-mascotas-a-parques-nacionales-tras-muerte-de-zorro-culpeo/">Artículo 2019: “CONAF reitera llamado a no ingresar con mascotas a parques nacionales tras muerte de zorro culpeo”.</a>
                             </div>
