--- a/index.html
+++ b/index.html
@@ -253,6 +253,12 @@
                 fill(0);
                 ellipse(mouseX, mouseY, 50, 50);
             }
+	
+	  function draw() {
+                background(200);
+                fill(0);
+                ellipse(mouseX, mouseY, 50, 50);
+            }
 
             function windowResized() {
                 resizeCanvas(w, h);
