--- a/surface.html
+++ b/surface.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
         <!--estas son las fuentes de Google-->
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
         <!--este es el estilo CSS que usamos en index.html y surface.html-->
         <link rel="stylesheet" href="style.css" />
@@ -48,7 +48,7 @@
                             <h5 class="my-3">Título de quinto nivel (h5)</h5>
                             <h6 class="my-3">Título de sexto nivel (h6)</h6>
                             <p class="my-3">
-                                Texto de párrafo. De Google Fonts se toma la familia <a href="https://fonts.google.com/specimen/Epilogue">Epilogue</a>. Se usan 2 de sus 18 estilos: Regular 400 y <strong>Extra-bold 800</strong>.
+                                Texto de párrafo. De Google Fonts se toma la familia <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a>. Se usa 2 de sus 18 estilos: Regular 400 y <strong>Semi-bold 600</strong>.
                             </p>
                             <small>Se utilizan los tamaños de cuerpo que ofrece <a href="https://getbootstrap.com/">Bootstrap</a> por defecto.</small>
                             <hr class="my-5" />
