--- a/index.html
+++ b/index.html
@@ -251,13 +251,9 @@
             function draw() {
                 background(200);
                 fill(0);
-                ellipse(mouseX, mouseY, 50, 50);
+                rect(mouseX, mouseY, 50, 50);
             }
 	
-	  function draw() {
-
-                ellipse(mouseX, mouseY, 50, 50);
-            }
 
             function windowResized() {
                 resizeCanvas(w, h);
