--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
                 rect(mouseX, mouseY, 50, 50);
             }
 	
+		 function draw() {
+       
+                rect(mouseX, mouseY, 50, 50);
+            }
+	
 
             function windowResized() {
                 resizeCanvas(w, h);
