--- a/surface.html
+++ b/surface.html
@@ -61,7 +61,7 @@
                     <div class="row">
                         <div class="col-10 col-sm-8 mx-auto">
                             <p class="lead">Iconografía</p>
-                            <p class="my-3">De los 286 íconos disponibles en <a href="https://feathericons.com/">Feather</a>, se podrían aprovechar los siguientes 12:</p>
+                            <p class="my-3">De los 286 íconos disponibles en <a href="https://feathericons.com/">Feather</a>, se utilizan en la página web los siguientes 12 íconos:</p>
                             <div class="row mb-5">
                                 <!-- icono 1 -->
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-2">
@@ -160,8 +160,7 @@
                         <div class="col-10 col-sm-8 mx-auto mb-5">
                             <p class="lead">Textos</p>
                             <p class="my-3">
-                                Considerando el framework de las cuatro dimensiones del tono de voz, propuesto por <a href="https://www.nngroup.com/articles/tone-of-voice-dimensions/">NNGroup</a> (humor, formalidad, respeto y
-                                entusiasmo), y considerando también nuestros contenidos visuales y textuales, el tono de de voz de la versión digital del fanzine será:
+                                La página web creada, habla de por qué no se deberían llevar mascotas a las áreas silvestres protegidas y los efectos de negativos de estos en la flora y fauna. Si bien el tema del que se habla es totalmente serio, siguiendo con la gráfica utilizada en el fanzine hicimos la gráfica de la web más casual. Por otro lado se habla con un todo totalmente respetuoso. Por último quisimos presentar información verídica para darle peso al tema pero al mismo tiempo queremos motivar al público a hablar del tema y respetarlo.
                             </p>
                             <div class="row align-content-center mb-5 small">
                                 <!----------------------- HUMOR ----------------------->
