--- a/skeleton.html
+++ b/skeleton.html
@@ -64,7 +64,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light" src="img/graficopdp.svg" alt="Porcentaje de áreas silvestres amenazadas por perros y gatos." />
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8" allowfullscreen></iframe> 
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="pen-tool"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
