--- a/index.html
+++ b/index.html
@@ -252,12 +252,13 @@
             function draw() {
                 background(200);
                 fill(0);
-                text(mensaje, mouseX, mouseY, 50, 50);
+		noStroke();
+                ellipse(mensaje, mouseX, mouseY, 50, 50);
             }
 	
 		 function draw() {
        
-                text(mensaje, mouseX, mouseY, 50, 50);
+                ellipse(mensaje, mouseX, mouseY, 50, 50);
             }
 	
 
