--- a/skeleton.html
+++ b/skeleton.html
@@ -43,7 +43,7 @@
             <!--artículo con EMBED-->
             <article>
                 <div class="container">
-                    <div class="row py-5 align-items-center">
+                  <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7 order-sm-last">
                             <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
@@ -67,7 +67,7 @@
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8" allowfullscreen></iframe> 
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
-                            <h3><i data-feather="pen-tool"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
+                            <h3><i data-feather="frown"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
                             <p>
                             Los perros y los gatos son un peligro para la flora y fauna de las áreas silvestres por distintos motivos. Por un lado, sus instintos pueden llevarlos a atacar a otros animales en sus hábitats. Por otro lado al orinar y defecar pueden transmitirles a otros animales enfermedades.
                             </p>
