--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="container">
-                <div class="row h-99">
+                <div class="row h-100">
                     <div class="col-12 text-center my-auto">
                         <h1>¿Por qué no llevar tu perro al cerro?</h1>
                         <h2>Impacto ambiental de los perros en las zonas silvestres</h2>
@@ -283,7 +283,7 @@
                 { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/marti.png" },
                 { nombre: "Javiera Infante", descriptor: "Jevy, 21 años, Cáncer", foto: "img/javi.png" },
                 { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Tauro", foto: "img/paula.png" },
-                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/pia.png" },
+                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/aip.png" },
                 { nombre: "Natalia Wang", descriptor: "Waty, 21 años, Libra", foto: "img/naty.png" },
             ];
             // No es necesario que editen lo que sigue
