--- a/skeleton.html
+++ b/skeleton.html
@@ -45,8 +45,10 @@
                 <div class="container">
                   <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7 order-sm-last">
-                            <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
-                        </div>
+                           <div class="embed-responsive embed-responsive-16by9">
+				    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/p2n9Umubv30" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
                             <h3><i data-feather="book-open"></i> Normativa para mascotas en Áreas Silvestres Protegidas</h3>
                             <p>
@@ -64,7 +66,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8" allowfullscreen></iframe> 
+                            <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="frown"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
