--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 800 400" style="enable-background:new 0 0 800 400;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:#F49F3F;}
 	.st1{fill:#7872AD;}
 	.st2{fill:none;}
-	.st3{fill:#37806F;}
+	.st3{fill:#FFFFFF;}
 	.st4{font-family:'Montserrat-Medium';}
 	.st5{font-size:21.694px;}
 	.st6{font-size:13.4296px;}
-	.st7{fill:none;stroke:#37806F;stroke-width:2;stroke-miterlimit:10;}
+	.st7{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
 	.st8{font-family:'Montserrat-Bold';}
 	.st9{font-size:30.9914px;}
-	.st10{fill:#FFFFFF;}
+	.st10{fill:#37806F;}
 	.st11{font-size:25.8262px;}
 </style>
 <g>
@@ -123,6 +123,7 @@
 <text transform="matrix(1 0 0 1 271.4395 131.4717)"><tspan x="0" y="0" class="st3 st8 st11"> % ÁREAS </tspan><tspan x="-16.37" y="30.99" class="st3 st8 st11">SILVESTRES </tspan><tspan x="-33.75" y="61.98" class="st3 st8 st11">AMENAZADAS </tspan><tspan x="-37.31" y="92.97" class="st3 st8 st11">POR PERROS Y </tspan><tspan x="17.85" y="123.97" class="st3 st8 st11">GATOS</tspan></text>
 <circle class="st1" cx="532.28" cy="318.68" r="6.32"/>
 </svg>
+
 
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
