--- a/surface.html
+++ b/surface.html
@@ -10,7 +10,7 @@
 
         <!--este es el estilo CSS que usamos en index.html y surface.html-->
         <link rel="stylesheet" href="style.css" />
-        <title>¿Por qué no llevar a tu perro al cerro?</title>
+        <title>Areas Silvestres</title>
     </head>
     <body>
         <header>
