--- a/skeleton.html
+++ b/skeleton.html
@@ -66,7 +66,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light" src="iimg/graficopdp.svg" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="frown"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
@@ -196,7 +196,7 @@
                 { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/marti.png" },
                 { nombre: "Javiera Infante", descriptor: "Jevy, 21 años, Cáncer", foto: "img/javi.png" },
                 { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Tauro", foto: "img/paula.png" },
-                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/pia.png" },
+                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/PIA.jpeg" },
                 { nombre: "Natalia Wang", descriptor: "Waty, 21 años, Libra", foto: "img/naty.png" },
             ];
             // No es necesario que editen lo que sigue
