--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/marti.png" },
                 { nombre: "Javiera Infante", descriptor: "Jevy, 21 años, Cáncer", foto: "img/javi.png" },
                 { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Tauro", foto: "img/paula.png" },
-                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/aip.png" },
+                { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/PIA.jpeg" },
                 { nombre: "Natalia Wang", descriptor: "Waty, 21 años, Libra", foto: "img/naty.png" },
             ];
             // No es necesario que editen lo que sigue
