--- a/skeleton.html
+++ b/skeleton.html
@@ -66,7 +66,7 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                            <img loading="lazy" class="img-fluid bg-light" src="iimg/graficopdp.svg" alt="describa la imagen" />
+                            <img loading="lazy" class="img-fluid bg-light" src="img/graficopdp2.svg" alt="Se ve un gráfico que muestra los porcentajes de areas silvestres afectadas por gatos y perros" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
                             <h3><i data-feather="frown"></i> Animales domésticos afectan a especies en áreas protegidas de nuestro país.</h3>
