--- a/index.html
+++ b/index.html
@@ -72,57 +72,57 @@
                 <div class="container">
                     <div class="row py-5 align-items-center">
                         <div class="col-md-6 col-lg-7">
-                          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 800 400" style="enable-background:new 0 0 800 400;" xml:space="preserve">
 <style type="text/css">
-	.st0{fill:#F49F3F;}
-	.st1{fill:#7872AD;}
-	.st2{fill:none;}
-	.st3{fill:#FFFFFF;}
-	.st4{font-family:'Montserrat-Medium';}
-	.st5{font-size:21.694px;}
-	.st6{font-size:13.4296px;}
-	.st7{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
-	.st8{font-family:'Montserrat-Bold';}
-	.st9{font-size:30.9914px;}
-	.st10{fill:#37806F;}
+	.st0{fill:#3C8378;}
+	.st1{fill:#8784d1;}
+	.st2{fill:#f7ad48;}
+	.st3{fill:none;}
+	.st4{fill:#FFFFFF;}
+	.st5{font-family:'Montserrat-Regular';}
+	.st6{font-size:21.694px;}
+	.st7{font-size:13.4296px;}
+	.st8{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
+	.st9{font-family:'Montserrat-Bold';}
+	.st10{font-size:30.9914px;}
 	.st11{font-size:25.8262px;}
 </style>
+<rect class="st0" width="800" height="400"/>
 <g>
 </g>
 <g>
 </g>
 <g>
 	<g>
-		<g>
-			<path class="st0" d="M335.22,180.52l97.97-145.15c44.89,30.3,71.78,75.98,76.48,129.94L335.22,180.52z"/>
-		</g>
-	</g>
-	<g>
-		<g>
-			<path class="st1" d="M335.22,180.52l174.45-15.21c8.4,96.35-62.9,181.26-159.25,189.66s-181.26-62.9-189.66-159.25
-				c-8.4-96.35,62.9-181.26,159.25-189.66c42.39-3.7,77.91,5.5,113.18,29.31L335.22,180.52z"/>
-		</g>
+		<path class="st1" d="M335.22,180.52l97.97-145.15c44.89,30.3,71.78,75.98,76.48,129.94L335.22,180.52z"/>
 	</g>
 </g>
-<rect x="467.55" y="311.28" class="st2" width="173.78" height="44.9"/>
-<text transform="matrix(1 0 0 1 554.4414 327.377)"><tspan x="0" y="0" class="st3 st4 st5"> </tspan><tspan x="-69.92" y="26.03" class="st3 st4 st5">amenazadas</tspan></text>
-<rect x="196.59" y="362.87" class="st2" width="293.78" height="77.86"/>
-<text transform="matrix(1 0 0 1 343.4814 372.833)"><tspan x="0" y="0" class="st3 st4 st6"> </tspan><tspan x="-91.61" y="16.12" class="st3 st4 st6">(Miradordecondores, 2020)</tspan></text>
-<rect x="534.01" y="76.6" class="st2" width="147.58" height="43.46"/>
-<text transform="matrix(1 0 0 1 647.209 92.6987)"><tspan x="0" y="0" class="st3 st4 st5"> no </tspan><tspan x="-105.45" y="26.03" class="st3 st4 st5">amenazadas</tspan></text>
-<polyline class="st7" points="559.16,83.94 543.5,83.94 502.01,100.23 "/>
-<polyline class="st7" points="530.58,318.68 514.6,318.68 481.07,288.3 "/>
-<circle class="st0" cx="559.16" cy="83.94" r="6.32"/>
-<rect x="550.6" y="304.68" class="st2" width="75.37" height="27.99"/>
-<text transform="matrix(1 0 0 1 554.5938 327.6797)" class="st3 st8 st9">86%</text>
-<rect x="574.39" y="69.94" class="st2" width="75.37" height="27.99"/>
-<text transform="matrix(1 0 0 1 581.7334 92.9346)" class="st3 st8 st9">14%</text>
-<circle class="st10" cx="335.22" cy="180.52" r="115.78"/>
-<rect x="220.51" y="104.31" class="st2" width="229.49" height="194.57"/>
-<text transform="matrix(1 0 0 1 270.4395 123.4717)"><tspan x="0" y="0" class="st3 st8 st11"> % ÁREAS </tspan><tspan x="-16.37" y="30.99" class="st3 st8 st11">SILVESTRES </tspan><tspan x="-33.75" y="61.98" class="st3 st8 st11">AMENAZADAS </tspan><tspan x="-37.31" y="92.97" class="st3 st8 st11">POR PERROS Y </tspan><tspan x="17.85" y="123.97" class="st3 st8 st11">GATOS</tspan></text>
-<circle class="st1" cx="532.28" cy="318.68" r="6.32"/>
+<g>
+	<g>
+		<path class="st2" d="M335.22,180.52l174.45-15.21c8.4,96.35-62.9,181.26-159.25,189.66s-181.26-62.9-189.66-159.25
+			c-8.4-96.35,62.9-181.26,159.25-189.66c42.39-3.7,77.91,5.5,113.18,29.31L335.22,180.52z"/>
+	</g>
+</g>
+<rect x="467.55" y="311.28" class="st3" width="173.78" height="44.9"/>
+<text transform="matrix(1 0 0 1 554.4414 327.377)"><tspan x="0" y="0" class="st4 st5 st6"> </tspan><tspan x="-69.92" y="26.03" class="st4 st5 st6">amenazadas</tspan></text>
+<rect x="196.59" y="362.87" class="st3" width="293.78" height="77.86"/>
+<text transform="matrix(1 0 0 1 343.4814 372.833)"><tspan x="0" y="0" class="st4 st5 st7"> </tspan><tspan x="-91.61" y="16.12" class="st4 st5 st7">(Miradordecondores, 2020)</tspan></text>
+<rect x="534.01" y="76.6" class="st3" width="147.58" height="43.46"/>
+<text transform="matrix(1 0 0 1 647.209 92.6987)"><tspan x="0" y="0" class="st4 st5 st6"> no </tspan><tspan x="-105.45" y="26.03" class="st4 st5 st6">amenazadas</tspan></text>
+<polyline class="st8" points="559.16,83.94 543.5,83.94 502.01,100.23 "/>
+<polyline class="st8" points="530.58,318.68 514.6,318.68 481.07,288.3 "/>
+<circle class="st1" cx="559.16" cy="83.94" r="6.32"/>
+<rect x="550.6" y="304.68" class="st3" width="75.37" height="27.99"/>
+<text transform="matrix(1 0 0 1 554.5938 327.6797)" class="st4 st9 st10">86%</text>
+<rect x="574.39" y="69.94" class="st3" width="75.37" height="27.99"/>
+<text transform="matrix(1 0 0 1 581.7334 92.9346)" class="st4 st9 st10">14%</text>
+<circle class="st0" cx="335.22" cy="180.52" r="115.78"/>
+<rect x="220.51" y="104.31" class="st3" width="229.49" height="194.57"/>
+<text transform="matrix(1 0 0 1 270.4395 123.4717)"><tspan x="0" y="0" class="st4 st9 st11"> % ÁREAS </tspan><tspan x="-16.37" y="30.99" class="st4 st9 st11">SILVESTRES </tspan><tspan x="-33.75" y="61.98" class="st4 st9 st11">AMENAZADAS </tspan><tspan x="-37.31" y="92.97" class="st4 st9 st11">POR PERROS Y </tspan><tspan x="17.85" y="123.97" class="st4 st9 st11">GATOS</tspan></text>
+<circle class="st2" cx="532.28" cy="318.68" r="6.32"/>
 </svg>
+
 
                         </div>
                         <div class="col-md-6 col-lg-5 p-4">
