--- a/surface.html
+++ b/surface.html
@@ -30,7 +30,7 @@
                             <p><span style="color: rgba(34, 99, 89, 0.8);"> --coloroscuro: rgba(34, 99, 89, 0.8);</span></p>
                             <div class="alert shadow-sm" role="alert" style="background: #8784d1;">--primercolor: #8784d1;</div>
                             <div class="alert shadow-sm" role="alert" style="background: #f7ad48;">--segundocolor: #f7ad48;</div>
-                            <div class="alert shadow-sm" role="alert" style="background: #265652;">--tercercolor: #265652;</div>
+                            <div class="alert shadow-sm" role="alert" style="background: #3C8378;">--tercercolor: #265652;</div>
                             <hr class="my-5" />
                         </div>
                     </div>
