--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
         <!--estas son las fuentes de Google-->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
         <!--este es el estilo CSS que usamos en index.html y surface.html-->
         <link rel="stylesheet" href="style.css" />
         <title>Áreas Silvestres</title>
@@ -80,7 +80,7 @@
 	.st2{fill:#f7ad48;}
 	.st3{fill:none;}
 	.st4{fill:#FFFFFF;}
-	.st5{font-family:'Montserrat-Regular';}
+	.st5{font-family:'Montserrat-Medium';}
 	.st6{font-size:21.694px;}
 	.st7{font-size:13.4296px;}
 	.st8{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
