--- a/skeleton.html
+++ b/skeleton.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <div class="row h-100">
                     <div class="col-12 text-center my-auto">
-                        <h1>¿Por qué no llevar tu mascota al cerro?</h1>
+                        <h1><strong>¿Por qué no llevar tu perro al cerro?</strong></h1>
                         <h2>Impacto ambiental de los perros en las zonas silvestres</h2>
                     </div>
                 </div>
