--- a/surface.html
+++ b/surface.html
@@ -41,7 +41,7 @@
                     <div class="row">
                         <div class="col-10 col-sm-8 mx-auto">
                             <p class="lead">Tipografía</p>
-                            <h1 class="my-3">Título de primer nivel (h1)</h1>
+                            <h1 class="my-3"><strong>Título de primer nivel (h1)</strong></h1>
                             <h2 class="my-3">Título de segundo nivel (h2)</h2>
                             <h3 class="my-3">Título de tercer nivel (h3)</h3>
                             <h4 class="my-3">Título de cuarto nivel (h4)</h4>
