--- a/index.html
+++ b/index.html
@@ -233,11 +233,10 @@
         <!--JavaScript para el <canvas></canvas>, simplificado con p5.js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js" integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA==" crossorigin="anonymous"></script>
         <script>
-     // parto creando tres variables
+        // parto creando tres variables
             var box = document.querySelector("#p5");
             var w = box.clientWidth;
             var h = (w / 16) * 9;
-	var mensaje = hola
             // defino una altura
             box.style.color = h + "px";
             // en caso quieran asomarse a la consola
@@ -252,14 +251,13 @@
             function draw() {
                 background(200);
                 fill(0);
-                ellipse(mensaje, mouseX, mouseY, 50, 50);
+                ellipse(mouseX, mouseY, 50, 50);
             }
-	
-		 function draw() {
-       
-                ellipse(mensaje, mouseX, mouseY, 50, 50);
+		  function draw() {
+                background(200);
+                fill(0);
+                ellipse(mouseX, mouseY, 50, 50);
             }
-	
 
             function windowResized() {
                 resizeCanvas(w, h);
