--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
             }
 
             function draw() {
-  
-                fill(0);
+		backgroundground(200);
+                fill(1);
                 ellipse(mouseX, mouseY, 35, 35);
             }
 		  function draw() {
