--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
             function draw() {
 		backgroundground(200);
-                fill(1);
+                fill(#015293);
                 ellipse(mouseX, mouseY, 35, 35);
             }
 		  function draw() {
