--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@
 
             function draw() {
 		backgroundground(200);
-                fill(#015293);
-                ellipse(mouseX, mouseY, 35, 35);
+                fill(0);
+                ellipse(mouseX, mouseY, 20, 20);
             }
 		  function draw() {
-                ellipse(mouseX, mouseY, 35, 35);
+                ellipse(mouseX, mouseY, 20, 20);
             }
 
             function windowResized() {
