--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
             }
 
             function draw() {
-		backgroundground(200);
-                fill(0);
+		background(200);
+                fill(30);
                 ellipse(mouseX, mouseY, 20, 20);
             }
 		  function draw() {
