--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
             function draw() {
 		background(200);
-                fill(30);
+                fill(247, 147, 30);
                 ellipse(mouseX, mouseY, 20, 20);
             }
 		  function draw() {
