--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
                 ellipse(mouseX, mouseY, 20, 20);
             }
 		  function draw() {
+	       fill(247, 147, 30);
                 ellipse(mouseX, mouseY, 20, 20);
             }
 
