--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
             function draw() {
 		background(200);
                 fill(247, 147, 30);
-		stroke (247, 147, 30);
+		stroke (random(0),random(255),random(255));
                 ellipse(mouseX, mouseY, 20, 20);
             }
 		  function draw() {
 	       fill(247, 147, 30);
-		stroke (247, 147, 30);	
+		stroke (random(0),random(255),random(255));	
                 ellipse(mouseX, mouseY, 20, 20);
             }
 
