--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
 
             function draw() {
 		background(200);
-                fill(247, 147, 30);
+                fill(random(0),random(255),random(255));
 		stroke (random(0),random(255),random(255));
                 ellipse(mouseX, mouseY, 20, 20);
             }
 		  function draw() {
-	       fill(247, 147, 30);
+	       fill(random(0),random(255),random(255));
 		stroke (random(0),random(255),random(255));	
                 ellipse(mouseX, mouseY, 20, 20);
             }
