--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
                             <h3><i data-feather="thumbs-up"></i> Experimentación con canvas</h3>
                             <p>
-                                Le hicimos pequeñas modificaciones al codigo ya existente.
+                                Se le hicieron pequeñas modificaciones al código ya existente. De esta forma la figura sigue siendo una elipse que se mueve en relación al cursor, pero va dejando rastro de su recorrido. Ademas, el fill fue puesto en modalidad random de tal forma que este fuera variando aleatoriamente.
                             </p>
                             <p class="small d-none d-lg-block">
-                                En este caso, se recomienda utilizar <a href="https://p5js.org/es/">p5.js</a>, una biblioteca de JavaScript que reformula Processing (que está basado en Java), y les puede permitir introducirse a un lenguaje de programación.
+                                Te invitamos a que muevas el mouse sobre el lado derecho de la página!
                             </p>
                         </div>
                     </div>
@@ -252,12 +252,12 @@
 		background(200);
                 fill(random(255),random(255),random(255));
 		noStroke();
-                ellipse(mouseX, mouseY, 20, 20,10,10);
+                ellipse(mouseX, mouseY, 20, 20);
             }
 		  function draw() {
 	       fill(random(255),random(255),random(255));	
                noStroke();
-                ellipse(mouseX, mouseY, 20, 20,10,10);
+                ellipse(mouseX, mouseY, 20, 20);
             }
 
             function windowResized() {
