--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
                             <h3><i data-feather="thumbs-up"></i> Experimentación con canvas</h3>
                             <p>
-                                Se le hicieron pequeñas modificaciones al código ya existente. De esta forma la figura sigue siendo una elipse que se mueve en relación al cursor, pero va dejando rastro de su recorrido. Ademas, el fill fue puesto en modalidad random de tal forma que este fuera variando aleatoriamente.
+                                Se le hicieron pequeñas modificaciones al código ya existente. De esta forma la figura sigue siendo una elipse que se mueve en relación al cursor, pero va dejando rastro de su recorrido. Ademas, el 'fill' fue puesto en modalidad 'random' de tal forma que este fuera variando aleatoriamente.
                             </p>
                             <p class="small d-none d-lg-block">
                                 Te invitamos a que muevas el mouse sobre el lado derecho de la página!
