--- a/skeleton.html
+++ b/skeleton.html
@@ -88,12 +88,12 @@
                             <img loading="lazy" class="img-fluid bg-light" src="img/wireframe-aspect_ratio-16-9.png" alt="describa la imagen" />
                         </div>
                         <div class="col-md-6 col-lg-5 p-4 text-md-right order-sm-first">
-                            <h3><i data-feather="thumbs-up"></i> Este subtítulo tiene que comentar un canvas</h3>
+                            <h3><i data-feather="thumbs-up"></i> Experimentación con canvas</h3>
                             <p>
-                                Canvas también nos permite dibujar con texto. Pero aquí tenemos un elemento de HTML cuyas dimensiones no se ajustan automáticamente, y dentro del cual se programan gráficos tipo bitmap, generalmente, con JavaScript.
+                                 Se le hicieron pequeñas modificaciones al código ya existente. De esta forma la figura sigue siendo una elipse que se mueve en relación al cursor, pero va dejando rastro de su recorrido. Ademas, el 'fill' fue puesto en modalidad 'random' de tal forma que este fuera variando aleatoriamente.
                             </p>
                             <p class="small d-none d-lg-block">
-                                En YouTube busquen el botón de compartir. Al presionarlo, aparece una ventana. Seleccionen la opción "insertar". Copien el código. Luego reemplacen en ancho y alto por la clase de Bootstrap.
+                               Te invitamos a que muevas el mouse sobre el lado derecho de la página!
                             </p>
                         </div>
                     </div>
