--- a/skeleton.html
+++ b/skeleton.html
@@ -193,9 +193,9 @@
             // Tienen que editar los elementos dentro de la siguiente variable
             var integrantes = [
                 { nombre: "Victoria García", descriptor: "Pichon, 21 años, Acuario", foto: "img/vicky.png" },
-                { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/marti.png" },
+                { nombre: "Martina González", descriptor: "Martuk, 21 años, Libra", foto: "img/marti.jpg" },
                 { nombre: "Javiera Infante", descriptor: "Jevy, 21 años, Cáncer", foto: "img/javi.png" },
-                { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Tauro", foto: "img/paula.png" },
+                { nombre: "Paula Scheleff", descriptor: "Pola, 21 años, Tauro", foto: "img/paula.jpg" },
                 { nombre: "Pía Sekul", descriptor: "Pía Zdenka, 20 años, Piscis", foto: "img/PIA.jpeg" },
                 { nombre: "Natalia Wang", descriptor: "Waty, 21 años, Libra", foto: "img/naty.png" },
             ];
