--- a/index.html
+++ b/index.html
@@ -75,18 +75,19 @@
                          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 800 400" style="enable-background:new 0 0 800 400;" xml:space="preserve">
 <style type="text/css">
-	.st0{fill:#3C8378;}
-	.st1{fill:#8784d1;}
-	.st2{fill:#f7ad48;}
+	.st0{fill:#37806F;}
+	.st1{fill:#8784D1;}
+	.st2{fill:#F7AD48;}
 	.st3{fill:none;}
 	.st4{fill:#FFFFFF;}
-	.st5{font-family:'Montserrat-Medium';}
-	.st6{font-size:21.694px;}
-	.st7{font-size:13.4296px;}
-	.st8{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
-	.st9{font-family:'Montserrat-Bold';}
-	.st10{font-size:30.9914px;}
-	.st11{font-size:25.8262px;}
+	.st5{font-family:'GamjaFlower-Regular';}
+	.st6{font-size:33px;}
+	.st7{font-size:18px;}
+	.st8{fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+	.st9{font-size:42px;}
+	.st10{font-family:'Montserrat-Bold';}
+	.st11{font-size:30px;}
+	.st12{fill:none;stroke:#FFFFFF;stroke-width:1.5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
 </style>
 <rect class="st0" width="800" height="400"/>
 <g>
@@ -104,23 +105,26 @@
 			c-8.4-96.35,62.9-181.26,159.25-189.66c42.39-3.7,77.91,5.5,113.18,29.31L335.22,180.52z"/>
 	</g>
 </g>
-<rect x="467.55" y="311.28" class="st3" width="173.78" height="44.9"/>
-<text transform="matrix(1 0 0 1 554.4414 327.377)"><tspan x="0" y="0" class="st4 st5 st6"> </tspan><tspan x="-69.92" y="26.03" class="st4 st5 st6">amenazadas</tspan></text>
-<rect x="196.59" y="362.87" class="st3" width="293.78" height="77.86"/>
-<text transform="matrix(1 0 0 1 343.4814 372.833)"><tspan x="0" y="0" class="st4 st5 st7"> </tspan><tspan x="-91.61" y="16.12" class="st4 st5 st7">(Miradordecondores, 2020)</tspan></text>
-<rect x="534.01" y="76.6" class="st3" width="147.58" height="43.46"/>
-<text transform="matrix(1 0 0 1 647.209 92.6987)"><tspan x="0" y="0" class="st4 st5 st6"> no </tspan><tspan x="-105.45" y="26.03" class="st4 st5 st6">amenazadas</tspan></text>
+<g>
+	<rect x="430.24" y="311.12" class="st3" width="191.43" height="55.11"/>
+	<text transform="matrix(1 0 0 1 621.6744 329.2279)"><tspan x="0" y="0" class="st4 st5 st6"> </tspan><tspan x="-147.86" y="30" class="st4 st5 st6">amenazadas</tspan></text>
+</g>
+<rect x="191.76" y="353.54" class="st3" width="293.78" height="77.86"/>
+<text transform="matrix(1 0 0 1 338.6525 363.4161)"><tspan x="0" y="0" class="st4 st5 st7"> </tspan><tspan x="-89.89" y="21.6" class="st4 st5 st7">(Miradordecondores, 2020)</tspan></text>
+<rect x="505.83" y="75.82" class="st3" width="172.15" height="79.01"/>
+<text transform="matrix(1 0 0 1 643.0472 93.9291)"><tspan x="0" y="0" class="st4 st5 st6"> no </tspan><tspan x="-112.92" y="30" class="st4 st5 st6">amenazadas</tspan></text>
 <polyline class="st8" points="559.16,83.94 543.5,83.94 502.01,100.23 "/>
 <polyline class="st8" points="530.58,318.68 514.6,318.68 481.07,288.3 "/>
 <circle class="st1" cx="559.16" cy="83.94" r="6.32"/>
 <rect x="550.6" y="304.68" class="st3" width="75.37" height="27.99"/>
-<text transform="matrix(1 0 0 1 554.5938 327.6797)" class="st4 st9 st10">86%</text>
+<text transform="matrix(1 0 0 1 559.8164 327.7275)" class="st4 st5 st9">86%</text>
 <rect x="574.39" y="69.94" class="st3" width="75.37" height="27.99"/>
-<text transform="matrix(1 0 0 1 581.7334 92.9346)" class="st4 st9 st10">14%</text>
+<text transform="matrix(1 0 0 1 585.9883 92.9824)" class="st4 st5 st9">14%</text>
 <circle class="st0" cx="335.22" cy="180.52" r="115.78"/>
-<rect x="220.51" y="104.31" class="st3" width="229.49" height="194.57"/>
-<text transform="matrix(1 0 0 1 270.4395 123.4717)"><tspan x="0" y="0" class="st4 st9 st11"> % ÁREAS </tspan><tspan x="-16.37" y="30.99" class="st4 st9 st11">SILVESTRES </tspan><tspan x="-33.75" y="61.98" class="st4 st9 st11">AMENAZADAS </tspan><tspan x="-37.31" y="92.97" class="st4 st9 st11">POR PERROS Y </tspan><tspan x="17.85" y="123.97" class="st4 st9 st11">GATOS</tspan></text>
+<rect x="220.47" y="110.11" class="st3" width="229.49" height="194.57"/>
+<text transform="matrix(1 0 0 1 251.2838 132.3709)"><tspan x="0" y="0" class="st4 st10 st11"> </tspan><tspan x="8.49" y="0" class="st4 st5 st11">Porcentaje de </tspan><tspan x="-8.09" y="36" class="st4 st5 st11">Areas Silvestres </tspan><tspan x="-6.3" y="72" class="st4 st5 st11">amenazadas por </tspan><tspan x="1.96" y="108" class="st4 st5 st11">perros y gatos</tspan></text>
 <circle class="st2" cx="532.28" cy="318.68" r="6.32"/>
+<line class="st12" x1="251" y1="148.66" x2="254.44" y2="146.17"/>
 </svg>
 
 
