--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 800 400" style="enable-background:new 0 0 800 400;" xml:space="preserve">
 <style type="text/css">
-	.st0{fill:#37806F;}
+	.st0{fill:#265652;}
 	.st1{fill:#8784D1;}
 	.st2{fill:#F7AD48;}
 	.st3{fill:none;}
