--- a/surface.html
+++ b/surface.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
         <!--estas son las fuentes de Google-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
 
         <!--este es el estilo CSS que usamos en index.html y surface.html-->
         <link rel="stylesheet" href="style.css" />
@@ -48,7 +48,8 @@
                             <h5 class="my-3">Título de quinto nivel (h5)</h5>
                             <h6 class="my-3">Título de sexto nivel (h6)</h6>
                             <p class="my-3">
-                                Texto de párrafo. De Google Fonts se toma la familia <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a>. Se usa 2 de sus 18 estilos: Regular 400 y <strong>Semi-bold 600</strong>.
+                                De Google Fonts se toma la familia <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a>. Se usa 2 de sus 18 estilos: Regular 400 y <strong>Semi-bold 600</strong>.
+                                De Google Fonts se toma la familia <a href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap">Gamjaflower</a>. Se usa su único estilo: Regular 400.
                             </p>
                             <small>Se utilizan los tamaños de cuerpo que ofrece <a href="https://getbootstrap.com/">Bootstrap</a> por defecto.</small>
                             <hr class="my-5" />
