--- a/surface.html
+++ b/surface.html
@@ -50,7 +50,7 @@
                             <h6 class="my-3">Título de sexto nivel (h6)</h6>
                             <p class="my-3">
                                 De Google Fonts se toma la familia <a href="https://fonts.google.com/specimen/Montserrat">Montserrat</a>. Se usa 2 de sus 18 estilos: Regular 400 y <strong>Semi-bold 600</strong>.
-                                De Google Fonts se toma la familia <a href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap">Gamjaflower</a>. Se usa su único estilo: Regular 400.
+                                De Google Fonts se toma la familia <a href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap">Gamjaflower</a>. Se usa su único estilo: <strong>Regular 400</strong>.
                             </p>
                             <small>Se utilizan los tamaños de cuerpo que ofrece <a href="https://getbootstrap.com/">Bootstrap</a> por defecto.</small>
                             <hr class="my-5" />
