--- a/skeleton.html
+++ b/skeleton.html
@@ -106,7 +106,7 @@
                         <div class="col-10 mx-auto mb-5 text-center">
                             <p><i data-feather="smile"></i></p>
                             <p class="lead">
-                                ¿Vas a seguir llevando a tu perro al cerro? Te invitamos a unirte a este compromiso para que junto a tu mascota puedan proteger a nuestra flora y fauna silvestre. ¡Descarga nuestro fanzine, comprométete, compártelo en tus redes sociales con el hashtag #cuidemoslasareassilvestres!
+                                 ¿Vas a seguir llevando a tu perro al cerro? ¡Te invitamos a dejar a tu mascota en casa para que juntos puedan proteger a nuestra flora y fauna silvestre!
                             </p>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                         <div class="card shadow-sm">
                             <img src="img/CONAF.png" class="card-img-top" alt="logo CONAF" />
                             <div class="card-body">
-                                <a href="https://www.youtube.com/user/conafchile"> Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país por el canal de Youtube de la CONAF.</a>
+                                <a href="https://www.youtube.com/user/conafchile"> Infórmate más sobre temas de contaminación ambiental en las zonas silvestres de nuestro país.</a>
                             </div>
                         </div>
                     </div>
